// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`query-iterator concatQueryResults 1`] = `
[
  [
    QueryCommand {
      "clientCommand": QueryCommand {
        "deserialize": [Function],
        "input": {
          "ExclusiveStartKey": undefined,
          "ExpressionAttributeNames": {
            "#pk": "pk",
          },
          "ExpressionAttributeValues": {
            ":pk": "key",
          },
          "KeyConditionExpression": "#pk = :pk",
          "TableName": "table",
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "identify": [Function],
          "identifyOnResolve": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
        "schema": undefined,
        "serialize": [Function],
      },
      "input": {
        "ExclusiveStartKey": undefined,
        "ExpressionAttributeNames": {
          "#pk": "pk",
        },
        "ExpressionAttributeValues": {
          ":pk": "key",
        },
        "KeyConditionExpression": "#pk = :pk",
        "TableName": "table",
      },
      "inputKeyNodes": {
        "ExclusiveStartKey": {},
        "ExpressionAttributeValues": {},
        "KeyConditions": {
          "*": {
            "AttributeValueList": [],
          },
        },
        "QueryFilter": {
          "*": {
            "AttributeValueList": [],
          },
        },
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "outputKeyNodes": {
        "Items": {
          "*": {},
        },
        "LastEvaluatedKey": {},
      },
      "schema": undefined,
    },
  ],
  [
    QueryCommand {
      "clientCommand": QueryCommand {
        "deserialize": [Function],
        "input": {
          "ExclusiveStartKey": {
            "key": "1",
          },
          "ExpressionAttributeNames": {
            "#pk": "pk",
          },
          "ExpressionAttributeValues": {
            ":pk": "key",
          },
          "KeyConditionExpression": "#pk = :pk",
          "TableName": "table",
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "identify": [Function],
          "identifyOnResolve": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
        "schema": undefined,
        "serialize": [Function],
      },
      "input": {
        "ExclusiveStartKey": {
          "key": "1",
        },
        "ExpressionAttributeNames": {
          "#pk": "pk",
        },
        "ExpressionAttributeValues": {
          ":pk": "key",
        },
        "KeyConditionExpression": "#pk = :pk",
        "TableName": "table",
      },
      "inputKeyNodes": {
        "ExclusiveStartKey": {},
        "ExpressionAttributeValues": {},
        "KeyConditions": {
          "*": {
            "AttributeValueList": [],
          },
        },
        "QueryFilter": {
          "*": {
            "AttributeValueList": [],
          },
        },
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "outputKeyNodes": {
        "Items": {
          "*": {},
        },
        "LastEvaluatedKey": {},
      },
      "schema": undefined,
    },
  ],
  [
    QueryCommand {
      "clientCommand": QueryCommand {
        "deserialize": [Function],
        "input": {
          "ExclusiveStartKey": {
            "key": "2",
          },
          "ExpressionAttributeNames": {
            "#pk": "pk",
          },
          "ExpressionAttributeValues": {
            ":pk": "key",
          },
          "KeyConditionExpression": "#pk = :pk",
          "TableName": "table",
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "identify": [Function],
          "identifyOnResolve": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
        "schema": undefined,
        "serialize": [Function],
      },
      "input": {
        "ExclusiveStartKey": {
          "key": "2",
        },
        "ExpressionAttributeNames": {
          "#pk": "pk",
        },
        "ExpressionAttributeValues": {
          ":pk": "key",
        },
        "KeyConditionExpression": "#pk = :pk",
        "TableName": "table",
      },
      "inputKeyNodes": {
        "ExclusiveStartKey": {},
        "ExpressionAttributeValues": {},
        "KeyConditions": {
          "*": {
            "AttributeValueList": [],
          },
        },
        "QueryFilter": {
          "*": {
            "AttributeValueList": [],
          },
        },
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "outputKeyNodes": {
        "Items": {
          "*": {},
        },
        "LastEvaluatedKey": {},
      },
      "schema": undefined,
    },
  ],
]
`;

exports[`query-iterator concatQueryResults with start key 1`] = `
[
  [
    QueryCommand {
      "clientCommand": QueryCommand {
        "deserialize": [Function],
        "input": {
          "ExclusiveStartKey": {
            "key": "start-key",
          },
          "ExpressionAttributeNames": {
            "#pk": "pk",
          },
          "ExpressionAttributeValues": {
            ":pk": "key",
          },
          "KeyConditionExpression": "#pk = :pk",
          "TableName": "table",
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "identify": [Function],
          "identifyOnResolve": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
        "schema": undefined,
        "serialize": [Function],
      },
      "input": {
        "ExclusiveStartKey": {
          "key": "start-key",
        },
        "ExpressionAttributeNames": {
          "#pk": "pk",
        },
        "ExpressionAttributeValues": {
          ":pk": "key",
        },
        "KeyConditionExpression": "#pk = :pk",
        "TableName": "table",
      },
      "inputKeyNodes": {
        "ExclusiveStartKey": {},
        "ExpressionAttributeValues": {},
        "KeyConditions": {
          "*": {
            "AttributeValueList": [],
          },
        },
        "QueryFilter": {
          "*": {
            "AttributeValueList": [],
          },
        },
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "outputKeyNodes": {
        "Items": {
          "*": {},
        },
        "LastEvaluatedKey": {},
      },
      "schema": undefined,
    },
  ],
  [
    QueryCommand {
      "clientCommand": QueryCommand {
        "deserialize": [Function],
        "input": {
          "ExclusiveStartKey": {
            "key": "1",
          },
          "ExpressionAttributeNames": {
            "#pk": "pk",
          },
          "ExpressionAttributeValues": {
            ":pk": "key",
          },
          "KeyConditionExpression": "#pk = :pk",
          "TableName": "table",
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "identify": [Function],
          "identifyOnResolve": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
        "schema": undefined,
        "serialize": [Function],
      },
      "input": {
        "ExclusiveStartKey": {
          "key": "1",
        },
        "ExpressionAttributeNames": {
          "#pk": "pk",
        },
        "ExpressionAttributeValues": {
          ":pk": "key",
        },
        "KeyConditionExpression": "#pk = :pk",
        "TableName": "table",
      },
      "inputKeyNodes": {
        "ExclusiveStartKey": {},
        "ExpressionAttributeValues": {},
        "KeyConditions": {
          "*": {
            "AttributeValueList": [],
          },
        },
        "QueryFilter": {
          "*": {
            "AttributeValueList": [],
          },
        },
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "outputKeyNodes": {
        "Items": {
          "*": {},
        },
        "LastEvaluatedKey": {},
      },
      "schema": undefined,
    },
  ],
  [
    QueryCommand {
      "clientCommand": QueryCommand {
        "deserialize": [Function],
        "input": {
          "ExclusiveStartKey": {
            "key": "2",
          },
          "ExpressionAttributeNames": {
            "#pk": "pk",
          },
          "ExpressionAttributeValues": {
            ":pk": "key",
          },
          "KeyConditionExpression": "#pk = :pk",
          "TableName": "table",
        },
        "middlewareStack": {
          "add": [Function],
          "addRelativeTo": [Function],
          "applyToStack": [Function],
          "clone": [Function],
          "concat": [Function],
          "identify": [Function],
          "identifyOnResolve": [Function],
          "remove": [Function],
          "removeByTag": [Function],
          "resolve": [Function],
          "use": [Function],
        },
        "schema": undefined,
        "serialize": [Function],
      },
      "input": {
        "ExclusiveStartKey": {
          "key": "2",
        },
        "ExpressionAttributeNames": {
          "#pk": "pk",
        },
        "ExpressionAttributeValues": {
          ":pk": "key",
        },
        "KeyConditionExpression": "#pk = :pk",
        "TableName": "table",
      },
      "inputKeyNodes": {
        "ExclusiveStartKey": {},
        "ExpressionAttributeValues": {},
        "KeyConditions": {
          "*": {
            "AttributeValueList": [],
          },
        },
        "QueryFilter": {
          "*": {
            "AttributeValueList": [],
          },
        },
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "outputKeyNodes": {
        "Items": {
          "*": {},
        },
        "LastEvaluatedKey": {},
      },
      "schema": undefined,
    },
  ],
]
`;
